# images2pdf-qt

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: release.yml
include/: backend.h
src/: Main.qml  backend.cpp  main.cpp
